# ml-template

./: .gitignore  Dockerfile  LICENSE  MNISTModel.py  MnistDataModule.py  README.md  api.py  docker-compose.yml  experiment.py  model.py  pyproject.toml  requirements.txt  train.py  utils.py
configs/: production.yaml
k8s/base/: api-deployment.yaml  api-service.yaml  kustomization.yaml
k8s/overlays/development/: kustomization.yaml
k8s/overlays/production/: kustomization.yaml
ml-archive/configs/: development.yaml  testing.yaml  train.yaml
ml-archive/containers/api/: Dockerfile
ml-archive/containers/ml-service/: Dockerfile
ml-archive/pipelines/gitlab/: .gitlab-ci.yml
ml-archive/src/: __init__.py
ml-archive/src/api/: api_main.py
ml-archive/src/static/: index.html
ml-archive/src/utils/: __init__.py  visualization.py
ml-base/: README.md  api_main.py  mnist_data_module.py  predict.yaml  train.py  train.yaml
ml-base/static/: index.html
pipelines/azure/: azure-pipelines.yml
scripts/: run_training_podman.ps1  run_training_podman.sh  train.py
src/data/: __init__.py  mnist_data_module.py
src/models/: __init__.py  mnist_model.py
tests/: test_models.py
